@@ -1,3 +1,7 @@
+2015-02-04  Eric Abrahamsen  <eric@ericabrahamsen.net>
+
+	* nnir.el: Revert "Enable non-ASCII IMAP searches".
+
 2015-01-30  Glenn Morris  <rgm@gnu.org>
 
 	* gnus-registry.el (gnus-registry-max-pruned-entries)
